--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.3",
+    "react-signature-canvas": "^1.0.6",
+    "react-signature-pad": "^0.0.6",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
-    "sweetalert": "^2.1.2"
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.10.6"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
