--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.12.4",
+    "@react-pdf/renderer": "^3.3.8",
     "axios": "^1.6.7",
+    "jspdf": "^2.5.1",
     "react": "^18.2.0",
     "react-avatar-edit": "^1.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-pdf": "^7.7.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.3",
     "react-signature-canvas": "^1.0.6",
